fix folder collapse bug
optimize file struct

--- a/Public/assets/css/main.css
+++ b/Public/assets/css/main.css
@@ -359,7 +359,3 @@ a:focus,a:hover {
     color:#94A7B5;
     margin-bottom: 0px;
 }
-
-.editor {
-    position:relative;
-}
